<package>
  <name>ls_robot_description</name>
  <version>0.0.1</version>
  <description>
      Description of the ls_robot model.
  </description>
  <author email="xuanbowang@lslidar.com">Boxuan Wang</author>
  <maintainer email="xuanbowang@lslidar.com">Boxuan Wang</maintainer>
  <license>BSD</license>
  <url type="website">http://www.leishen-lidar.com</url>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>urdf</build_depend>
  <build_depend>xacro</build_depend>

  <run_depend>urdf</run_depend>
  <run_depend>xacro</run_depend>
</package>
